--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.1</version>
     </dependency>
+
+    <!--分页工具-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.2</version>
+    </dependency>
+
     <!-- spring框架包 -->
     <dependency>
       <groupId>org.springframework</groupId>
@@ -187,5 +195,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
